--- a/index.html
+++ b/index.html
@@ -297,10 +297,7 @@
                           </p>
                         </div>
                         <button 
-                          onClick={() => window.open(
-                              'roadmap.html',
-                                'noopener,noreferrer'
-                            )}
+                          onClick={() => window.location.assign('roadmap.html')}
                           className="mt-10 bg-indigo-600 text-white w-full py-4 rounded-2xl font-bold hover:bg-indigo-700 transition-all shadow-lg active:scale-95"
                         >
                           გადასვლა
