--- a/index.html
+++ b/index.html
@@ -217,11 +217,7 @@
                         
                         <div className="flex flex-wrap gap-5">
                           <button 
-                            onClick={() => window.open(
-                              'https://gen-lang-client-0471962304.web.app/',
-                                '_blank',
-                                'noopener,noreferrer'
-                            )}
+                            onClick={() => window.location.assign('ie.html')}
                             className="bg-indigo-600 text-white hover:bg-indigo-700 px-12 py-4 rounded-2xl font-bold transition-all shadow-xl hover:scale-[1.02] active:scale-95 text-lg"
                           >
                             გადასვლა
