--- a/index.html
+++ b/index.html
@@ -304,10 +304,8 @@
                     <div className="bg-white p-8 rounded-[2rem] border border-slate-100 flex flex-col justify-between shadow-sm group hover:shadow-xl hover:shadow-indigo-500/5 transition-all duration-300">
                         <div>
                           <div className="w-12 h-12 bg-indigo-50 text-indigo-600 rounded-2xl flex items-center justify-center mb-6">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
-                                <line x1="18" y1="20" x2="18" y2="10"/>
-                                 <line x1="12" y1="20" x2="12" y2="4"/>
-                                <line x1="6" y1="20" x2="6" y2="14"/>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round">
+                                <line x1="18" y1="20" x2="18" y2="10"/> <line x1="12" y1="20" x2="12" y2="4"/> <line x1="6" y1="20" x2="6" y2="14"/>
                             </svg>                           
                          </div>
                           <h3 className="text-2xl font-black mb-4 tracking-tight text-slate-800">Quantitative Methods in Economics - Roadmap</h3>
