--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                           </p>
                         </div>
                         <button 
-                          onClick={() => alert('Data Science Projects მალე ხელმისაწვდომი იქნება')}
+                          onClick={() => window.location.assign('dsml.html')}
                           className="mt-10 bg-indigo-600 text-white w-full py-4 rounded-2xl font-bold hover:bg-indigo-700 transition-all shadow-lg active:scale-95"
                         >
                           გადასვლა
