--- a/ie.html
+++ b/ie.html
@@ -147,7 +147,7 @@
                             გლოსარიუმი მოიცავს ინსტიტუციური ეკონომიკის ტერმინების ჩამონათვალს განმარტებებითა და მოკლე ახსნებით. იგი ინტეგრირებულია სახელმძღვანელოს ინტერაქტიულ ელემენტებთან და ტერმინების ტრენაჟორთან, რაც უზრუნველყოფს საჭირო ცნებების სწრაფად მოძიებას და მათ განმტკიცებას მაგალითების საშუალებით.
                         </p>
                         <button 
-                            onclick="alert('გლოსარიუმი მალე ხელმისაწვდომი იქნება')"
+                            onclick="window.open('https://glossary-501e6.web.app/', '_blank')"
                             class="bg-emerald-600 text-white px-8 py-4 rounded-2xl font-bold hover:bg-emerald-700 transition-all shadow-lg active:scale-95"
                         >
                             გადასვლა
