--- a/ie.html
+++ b/ie.html
@@ -168,12 +168,11 @@
                         </div>
                     </div>
                     <div class="flex-1">
-                        <h3 class="text-2xl sm:text-3xl font-black mb-4 text-slate-900 tracking-tight">ინსტიტუციური სკოლებისა და მეცნიერების ინტერაქტიული რუკა</h3>
+                        <h3 class="text-2xl sm:text-3xl font-black mb-4 text-slate-900 tracking-tight">ინსტიტუციური აზრის ინტერაქტიული რუკა</h3>
                         <p class="text-slate-600 text-lg leading-relaxed mb-6">
-                            ინტერაქტიული რუკა ასახავს ინსტიტუციური აზრის ევოლუციას საკვანძო მეცნიერთა ბიოგრაფიების მეშვეობით. ქრონოლოგიურ ხაზზე ნაჩვენებია ძირითადი იდეები და „მოსწავლე–მენტორის" კავშირები, აგრეთვე სხვადასხვა ინსტიტუციური სკოლების წარმოდგენა: ძველი ინსტიტუციონალიზმი, ახალი ინსტიტუციონალიზმი, ინსტიტუტების პოლიტიკური ეკონომიკა და სხვა. სტუდენტებს შეუძლიათ ვიზუალურად დააკვირდნენ იდეების განვითარებას და მათ ისტორიულ-თეორიულ კონტექსტს.
-                        </p>
+                            ინტერაქტიული რუკა ასახავს ინსტიტუციური აზრის ევოლუციას საკვანძო მეცნიერთა ბიოგრაფიების მეშვეობით. ქრონოლოგიურ ხაზზე ნაჩვენები მეცნიერთა მონაცემები მოიცავს მათ მოკლე ბიოგრაფიულ ცნობებს, აგრეთვე სხვადასხვა ინსტიტუციური სკოლების წარმოდგენა: ძველი ინსტიტუციონალიზმი, ახალი ინსტიტუციონალიზმი, ინსტიტუტების პოლიტიკური ეკონომიკა და სხვა. 
                         <button 
-                            onclick="alert('ინტერაქტიული რუკა მალე ხელმისაწვდომი იქნება')"
+                            onclick="window.open('https://timeline-f349f.web.app/', '_blank')"
                             class="bg-purple-600 text-white px-8 py-4 rounded-2xl font-bold hover:bg-purple-700 transition-all shadow-lg active:scale-95"
                         >
                             გადასვლა
@@ -275,7 +274,7 @@
                 უკან დაბრუნება
             </a>
             <p class="text-slate-400 font-medium">
-                Digital Course Kit · ინსტიტუციური ეკონომიკა
+                Digital Course Kit · ინსტიტუციური ეკონომიკა © Gocha Ugulava, Developed with Google AI Studio, 2026. v6.0
             </p>
         </div>
     </main>
