--- a/ie.html
+++ b/ie.html
@@ -170,7 +170,7 @@
                     <div class="flex-1">
                         <h3 class="text-2xl sm:text-3xl font-black mb-4 text-slate-900 tracking-tight">ინსტიტუციური აზრის ინტერაქტიული რუკა</h3>
                         <p class="text-slate-600 text-lg leading-relaxed mb-6">
-                            ინტერაქტიული რუკა ასახავს ინსტიტუციური აზრის ევოლუციას საკვანძო მეცნიერთა ბიოგრაფიების მეშვეობით. ქრონოლოგიურ ხაზზე ნაჩვენები მეცნიერთა მონაცემები მოიცავს მათ მოკლე ბიოგრაფიულ ცნობებს, აგრეთვე სხვადასხვა ინსტიტუციური სკოლების წარმოდგენა: ძველი ინსტიტუციონალიზმი, ახალი ინსტიტუციონალიზმი, ინსტიტუტების პოლიტიკური ეკონომიკა და სხვა. 
+                            ინტერაქტიული რუკა ასახავს ინსტიტუციური აზრის ევოლუციას საკვანძო მეცნიერთა ბიოგრაფიების მეშვეობით. ქრონოლოგიურ ხაზზე ნაჩვენები მეცნიერთა მონაცემები მოიცავს მათ მოკლე ბიოგრაფიულ ცნობებს, აგრეთვე სხვადასხვა ინსტიტუციური სკოლის აღწერას: ძველი ინსტიტუციონალიზმი, ახალი ინსტიტუციონალიზმი, ინსტიტუტების პოლიტიკური ეკონომიკა და სხვა. 
                         </p>
                         <button 
                             onclick="window.open('https://timeline-f349f.web.app/', '_blank')"
